# Text-Summarization-LLM

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  app.py  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  deploy.yml
.streamlit/: config.toml
agent/: __init__.py  summarization_agent.py
api/: main.py  routes.py  schemas.py
frontend/: index.html
frontend/static/css/: style.css
frontend/static/js/: api.js  app.js
summarizer/: __init__.py  config.py  core.py  evaluation.py  ingestion.py
tests/: conftest.py  test_api.py  test_core.py
training/: evaluate.py  train.py
