[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "text-summarizer-bart"
version = "2.0.0"
description = "Production-grade multi-model abstractive text summarization with BART, PEGASUS, and T5"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Karthik Mulugu", email = "karthikmulugu14@gmail.com" }]
requires-python = ">=3.10"
keywords = ["nlp", "summarization", "bart", "pegasus", "t5", "transformers", "fastapi", "streamlit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.2.0",
    "transformers>=4.40.0",
    "datasets>=2.18.0",
    "evaluate>=0.4.1",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "streamlit>=1.33.0",
    "plotly>=5.20.0",
    "pandas>=2.2.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "rouge-score>=0.1.2",
    "sentencepiece>=0.2.0",
    "accelerate>=0.29.0",
    "pdfplumber>=0.11.0",
    "trafilatura>=1.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
]
gpu = [
    "bert-score>=0.3.13",
    "bitsandbytes>=0.43.0",
]

[project.urls]
Homepage = "https://github.com/Karthik0809/Text-Summarization-Using-BART"
"HF Spaces" = "https://huggingface.co/spaces/karthik0809/text-summarizer"
"Bug Tracker" = "https://github.com/Karthik0809/Text-Summarization-Using-BART/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["summarizer*", "api*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
